# aws-test

./: .pre-commit-config.yaml  README.md  pyproject.toml
data/: services.json  services.yaml
docs/: index.html
docs/css/: style.css
docs/data/: services.json
docs/js/: main.js
src/aws_test/: __init__.py  models.py  utils.py
src/aws_test/scripts/: __init__.py  yaml2json.py
tests/: __init__.py  test_yaml.py
